--- a/dog_app.ipynb
+++ b/dog_app.ipynb
@@ -340,12 +340,18 @@
     "\n",
     "__Answer:__\n",
     "\n",
+    "There would likely be a tradeoff between accepting more human images (based on body shape, etc) and keeping the rate of false positives low. It seems like a reasonable tradeoff to indicate to the user that they must upload a photo with a clear view of a face in order to improve accuracy. \n",
+    "\n",
+    "However, it would be possible to detect humans in images by also including images of full or partial bodies in the training set, in order to detect those as well.\n",
+    "\n",
+    "__Optional Instructions__\n",
+    "\n",
     "We suggest the face detector from OpenCV as a potential way to detect human images in your algorithm, but you are free to explore other approaches, especially approaches that make use of deep learning :).  Please use the code cell below to design and test your own face detection algorithm.  If you decide to pursue this _optional_ task, report performance on each of the datasets."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -374,13 +380,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading data from https://github.com/fchollet/deep-learning-models/releases/download/v0.2/resnet50_weights_tf_dim_ordering_tf_kernels.h5\n"
+     ]
+    }
+   ],
    "source": [
     "from keras.applications.resnet50 import ResNet50\n",
     "\n",
@@ -422,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -464,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true,
     "deletable": true,
