complete first submission

--- a/dog_app.ipynb
+++ b/dog_app.ipynb
@@ -1246,8 +1246,7 @@
     "   \n",
     "__Question 5:__ Outline the steps you took to get to your final CNN architecture and your reasoning at each step.  Describe why you think the architecture is suitable for the current problem.\n",
     "\n",
-    "__Answer:__ \n",
-    "\n"
+    "__Answer:__ Training, validation, and testing bottleneck features are taken from the pre-trained CNN and applied to the identified model.\n"
    ]
   },
   {
