revise for second submission

--- a/dog_app.ipynb
+++ b/dog_app.ipynb
@@ -1246,7 +1246,10 @@
     "   \n",
     "__Question 5:__ Outline the steps you took to get to your final CNN architecture and your reasoning at each step.  Describe why you think the architecture is suitable for the current problem.\n",
     "\n",
-    "__Answer:__ Training, validation, and testing bottleneck features are taken from the pre-trained CNN and applied to the identified model.\n"
+    "__Answer:__ \n",
+    "We can take advantage of the huge amount of effort that has already gone into fine tuning and training the Resnet data image by slicing off the end of the neural network and connecting a layer with the same number of classes from the new data set. \n",
+    "\n",
+    "Given that there are multiple strategies for using transfer learning, this one is identified as suitable for the current problem because we can evaluate that our data set is relatively small (6680 training images) and that the data is similar to the original training data, since the Resnet data already contained images of dogs. This is in contrast to cases where you have larger data sets or different data, where high level features might be different or overfitting is less likely to be an issue.\n"
    ]
   },
   {
